# metro-express

./: .clangd  .gitignore  CMakeLists.txt  README.md  githublink.txt
.simulide/: main-v1.sim1
cmake/targets/: atmega32.cmake
cmake/toolchains/: avr-gcc.cmake
src/: CMakeLists.txt
src/HAL/: CMakeLists.txt
src/HAL/analog/: CMakeLists.txt  analog.c
src/HAL/analog/include/: analog.h  analog_types.h
src/HAL/button/: CMakeLists.txt  btn.c
src/HAL/button/include/: btn.h
src/HAL/lcd/: CMakeLists.txt  lcd.c  lcd_config.c
src/HAL/lcd/include/: lcd.h  lcd_config.h  lcd_types.h
src/HAL/led/: CMakeLists.txt  led.c
src/HAL/led/include/: led.h
src/HAL/pwm_driver/: CMakeLists.txt  pwm_driver.c
src/HAL/pwm_driver/include/: pwm_driver.h
src/HAL/serial/: CMakeLists.txt  serial.c
src/HAL/serial/include/: serial.h
src/HAL/timelib/: CMakeLists.txt  timelib.c
src/HAL/timelib/include/: timelib.h
src/HAL/timer_service/: CMakeLists.txt  timer_service.c
src/HAL/timer_service/include/: timer_service.h
src/MCAL/: CMakeLists.txt
src/MCAL/adc/: CMakeLists.txt  adc.c  adc_registers.c
src/MCAL/adc/include/: adc.h  adc_private.h  adc_registers.h  adc_types.h
src/MCAL/ext_int/: CMakeLists.txt  ext_int.c  ext_int_registers.c
src/MCAL/ext_int/include/: ext_int.h  ext_int_private.h  ext_int_registers.h  ext_int_types.h
src/MCAL/gpio/: CMakeLists.txt  gpio.c  gpio_registers.c  gpio_registers.h
src/MCAL/gpio/include/: gpio.h
src/MCAL/timer/: CMakeLists.txt  timer.c  timer_private.h  timer_registers.c  timer_registers.h
src/MCAL/timer/include/: timer.h  timer_private.h  timer_registers.h  timer_types.h
src/MCAL/twi/: CMakeLists.txt  twi.c
src/MCAL/twi/include/: twi.h  twi_types.h
src/MCAL/uart/: CMakeLists.txt  uart.c  uart_registers.c
src/MCAL/uart/include/: uart.h  uart_private.h  uart_registers.h  uart_types.h
src/app/: CMakeLists.txt  app.c  app.h  main.c
src/app/controller/: CMakeLists.txt  controller.c  controller_types.c
src/app/controller/include/: controller.h  controller_types.h
src/app/include/: app.h  app_types.h
src/app/logger/: CMakeLists.txt  logger.c
src/app/logger/include/: logger.h
src/app/passenger/: CMakeLists.txt  passenger.c  passenger_types.c
src/app/passenger/include/: passenger.h  passenger_types.h
src/app/ui/: CMakeLists.txt  ui.c
src/app/ui/include/: ui.h
src/board/: CMakeLists.txt  board.c
src/board/include/: board.h
src/utils/: CMakeLists.txt
src/utils/include/: bit_utils.h  str.h
